--- a/.luarc.json
+++ b/.luarc.json
@@ -2,6 +2,82 @@
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "Lua.diagnostics.globals": [
         "use",
-        "M"
+        "M",
+        "lfs"
+    ],
+    "Lua.workspace.checkThirdParty": false,
+    "Lua.workspace.library": [
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/lua-dev.nvim/types",
+        "/usr/local/share/nvim/runtime",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/Comment.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/LuaSnip",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-buffer",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-emoji",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-nvim-lsp",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-nvim-lsp-signature-help",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-nvim-lua",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp-path",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/cmp_luasnip",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/goto-preview",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/indent-blankline.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/lspkind-nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/lspsaga.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/null-ls.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-autopairs",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-bufferline.lua",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-cmp",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-lspconfig",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-surround",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-tree.lua",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-ts-autotag",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-ts-context-commentstring",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/nvim-ts-rainbow",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/playground",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/telescope.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/trouble.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/opt/vim-startuptime",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/Abstract-cs",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/alpha-nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/arctic.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/better-escape.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/close-buffers.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/diffview.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/editorconfig.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/fidget.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/filetype.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/gitsigns.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/glow.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/hop.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/lua-dev.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/lualine.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/lush.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/mason-lspconfig.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/mason.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/mkdnflow.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/neoscroll.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/neovim-session-manager",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nui.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-colorizer.lua",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-dap",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-dap-ui",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-deardiary",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-jdtls",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-magic",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-navic",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-treesitter",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/nvim-web-devicons",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/packer.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/penvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/plenary.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/popup.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/project.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/renamer.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/scope.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/telescope-file-browser.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/telescope-fzf-native.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/telescope-media-files.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/telescope-ui-select.nvim",
+        "/home/willefi/.local/share/nvim/site/pack/packer/start/which-key.nvim",
+        "${3rd}/lfs/library"
     ]
 }
